Sign In - Spacing issues Fixes #4

--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,8 @@ button {
   line-height: 2rem;
   padding: 0 .75rem;
   text-decoration: none;
+  margin-right: .5em;
+  margin-bottom: .5em;
 }
 
 .btn-primary {
@@ -253,11 +255,6 @@ button {
 
 .admin-gift-list:nth-child(even) {
   background-color: #f1f1f1;
-}
-
-.admin-gift-list .btn {
-  margin-right: .5em;
-  margin-bottom: .5em;
 }
 
 
